# bril

./: .gitignore  brili.ts  gc.toml
benchmarks/: turnt.toml
bril-coq/: _CoqProject  bril.opam  dune-project
bril-coq/theories/: Argument.v  BasicBlock.v  Function.v  Instruction.v  Literal.v  Program.v  Typ.v  dune
bril-coq/theories/Util/: JSON.v
bril-hs/: .gitignore  CHANGELOG.md  README.md  bar.bril  bril-hs.cabal  digital-root.bril  foo.bril  package.yaml
bril-hs/app/: Main.hs
bril-hs/src/Bril/: BasicBlock.hs  CFG.hs  Dataflow.hs  Dominator.hs  Expr.hs  Fresh.hs  Func.hs  Instr.hs  Literal.hs  Parse.hs  Phi.hs  Program.hs  SSA.hs  Type.hs
bril-hs/src/Bril/CFG/: ByInstr.hs  NodeMap.hs
bril-hs/src/Bril/Optimizations/: DCE.hs  Dataflow.hs  LVN.hs
bril-hs/src/Bril/Syntax/: Expr.hs  Func.hs  Instr.hs  Literal.hs  Program.hs  Type.hs
bril-hs/test/: Spec.hs  brench.toml  brench_ssa.toml.out  calculate_overhead.py  is_ssa.toml  no_dce_ssa.toml  ssa.toml  ssa_calculate_overhead.py.out  test.toml
bril-hs/test/dce/: dead-both-branches.bril  dead-both-branches.out  dead-in-loop-cascade.bril  dead-in-loop.bril  dead-in-loop.out  live-one-branch.bril  live-one-branch.out  turnt.toml
bril-hs/test/lvn/: identities.bril  identities.out  turnt.toml
bril-hs/test/lvn/const-fold/: basic.bril  bools.bril  bools.out  floats.bril  floats.out  ints.bril  ints.out
bril-hs/test/tdce/: global.bril  local.bril  turnt.toml
discussions/: l11.md
examples/test/ssa/: digital_root_fixed_input.bril  param_mut.bril  ssa2.bril  ssa3.bril
(+11 files in other folders)
